<resources>
    <string name="app_name">StayHook</string>
    <string name="google_map_api_key">AIzaSyDdjn78Q56nymORUkHZvTxNfm7czVEroXY</string>
    <string name="name">Name</string>
    <string name="real_name">Real Name :</string>
    <string name="marvel_detail">Details</string>
    <string name="welcome">Welcome</string>
    <string name="sign_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login_btn">Login</string>
    <string name="msg_time">5:30PM</string>
    <string name="write_a_message">Write a message...</string>
    <string name="register_btn">Register</string>
    <string name="already_have_an_account">Have an account?</string>
    <string name="sign_in_btn">Sign In Here</string>
    <string name="verify_detail">We have sent the code verification to +91 2345666666</string>
    <string name="pin_view">If you didn\'t receive any code?</string>
    <string name="resend_btn">Resend Code : </string>
    <string name="confirm">Confirm</string>
    <string name="close_app">Are you sure to close app?</string>
    <string name="ok_btn">OK</string>
    <string name="cancel_btn">Cancel</string>
    <string name="intro">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login to your account</string>
    <string name="create_acct">Create an account</string>
    <string name="create_acct_continue">Create an account to continue</string>
    <string name="team">Team</string>
    <string name="first_appearance">First Appearance</string>
    <string name="created_by">Created By</string>
    <string name="publisher">Publisher</string>
    <string name="bio">Bio</string>
    <string name="image">Image</string>
    <string name="hello">Hello</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="get_started_btn">Get Started</string>
    <string name="get_started_txt">Get Started!</string>
    <string name="email">Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="address">Noida,India</string>
    <string name="view_google_map">View on Google Maps</string>
    <string name="find">Find</string>
    <string name="recommand">Recommendations</string>
    <string name="recent_add">Recently Added</string>
    <string name="address_detail">Greater Noida , Gaur City Mall</string>
    <string name="amount">₹25,000/</string>
    <string name="view_detail">View Details</string>
    <string name="verify_success">Your OTP has been verify successfully</string>
    <string name="alert_session_expired">Your session has been expired as you are logged in from another device</string>
    <string name="maps_api_key">AIzaSyCn4NaEzeh7g-qW7xtkYewa8xv7LI1cdwU</string>
    <string name="remove">Are you sure you want to delete this Address?</string>
    <string name="edit_alert">Are you sure you want to Edit this Address?</string>
    <string name="month">Per Month</string>
    <string name="house">House</string>
    <string name="bed">2 Beds</string>
    <string name="apartmt_one">Primary Apartment</string>
    <string name="big_hall">One Big Hall Apartment</string>
    <string name="manger">Stayhook Manager</string>
    <string name="loram">Loream Ipsum</string>
    <string name="desc_kyc">Please ensure that all the details are true and accurate as these details will be used to License Agreement</string>
    <string name="private_room">Private Room</string>
    <string name="private_text">Private</string>
    <string name="shared_room">Shared Room</string>
    <string name="shared_text">Shared</string>
    <string name="client_review">(456 reviews)</string>
    <string name="review">3.5</string>
    <string name="description">Description</string>
    <string name="bath">2 Bath</string>
    <string name="sqft">2,456 sqft</string>
    <string name="facilities">Facilities</string>
    <string name="air_conditionar">Air Conditionar</string>
    <string name="kitchen">Kitchen</string>
    <string name="free_parking">Free Parking</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="price">Price</string>
    <string name="reserve_now">Reserve Now</string>
    <string name="location">Location</string>
    <string name="features_amp_amenties"><![CDATA[Features & Amenties]]></string>
    <string name="name1">Review Title<font color='#FF0000'>*</font></string>
    <string name="user_name">Name<font color='#FF0000'>*</font></string>
    <string name="email_i">Email<font color='#FF0000'>*</font></string>
    <string name="review_dsc">Review Description<font color='#FF0000'>*</font></string>
    <string name="search">Search</string>
    <string name="enter_an_address_or_city">Enter an address or city</string>
    <string name="enter_price_range">Enter Price Range</string>
    <string name="resident_type">Resident Type</string>
    <string name="search_now">Search Now</string>
    <string name="locations">Locations</string>
    <string name="move_in_date">Move In Date</string>
    <string name="continue_payment">Continue Payment</string>
    <string name="title_payment">Payment</string>
    <string name="move_out">Move Out</string>
    <string name="select_move_out_date">Select Move Out Date</string>
    <string name="move_out_date">Move Out Date</string>
    <string name="i_hereby_confirm_i_am_moving_out_from_the_property_you_agree_to_our">I hereby confirm i am moving out from the property, you agree to Our Terms and Conditions</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="profile">Profile</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="update">Update</string>
    <string name="gender">Gender</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="select_option">Select Option</string>
    <string name="enter_full_name">Please enter full name</string>
    <string name="enter_email">Please enter email</string>
    <string name="email_validation">Please enter a valid email</string>
    <string name="enter_phone">Enter the phone number</string>
    <string name="enter_pin">Please enter otp</string>
    <string name="enter_mobile_num">Please enter mobile number</string>
    <string name="enter_review_title">Please enter review title</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_review_desc">Please enter review description</string>
    <string name="update_profile">Update Profile</string>
    <string name="kyc_details">KYC Details</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="pan_number">Pan Number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="permanent_address">Permanent Address</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="upload_front_of_aadhar_card">Upload Front of Aadhar Card</string>
    <string name="upload_back_of_aadhar_card">Upload Back of Aadhar Card</string>
    <string name="upload_pan_card">Upload Pan Card</string>
    <string name="yes_move_out">Yes , Move-Out</string>
    <string name="upload">Upload</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="logout_text">Are you sure you want to Logout?</string>
    <string name="logging_out">Logging Out</string>
    <string name="summary">Summary</string>
    <string name="monthly_payable">Monthly Payable</string>
    <string name="monthly_rent">Monthly Rent</string>
    <string name="maintenance_cleaning_etc">Maintenance , Cleaning etc.</string>
    <string name="total_monthly_payout">Total Monthly Payout</string>
    <string name="to_be_paid_every_month">To be paid every month</string>
    <string name="move_in_aug_11_2023">Move-In Aug 11,2023</string>
    <string name="payable_now">Payable Now</string>
    <string name="refundable_deposit_security">Refundable Deposit-Security</string>
    <string name="_1_month_advance">1 Month Advance</string>
    <string name="total_payable_now">Total Payable now</string>
    <string name="pay_50_000">Pay ₹50,000</string>
    <string name="cred_pay_debit_card_netbanking_upi">CRED Pay/Debit Card/Netbanking/UPI</string>
    <string name="search_room">Search Room</string>
    <string name="search_for_properties">Search For Properties</string>
    <string name="my_saved_places">My Saved Places</string>
    <string name="edit">Edit</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_as">Save As</string>
    <string name="dismiss">Dismiss</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="you_ve_successfully_moved_out">You\'ve successfully moved out</string>
    <string name="write_a_review">Write a Review</string>
    <string name="about_us">About Us</string>
    <string name="amenities">Amenities</string>
    <string name="reviews">Reviews</string>
    <string name="schedule_visit">Schedule Visit</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="select_duration">Select Duration</string>
    <string name="select_bed">Select Bed</string>
    <string name="select_room">Select Room</string>
    <string name="morning_slots">Morning Slots</string>
    <string name="enter_details">Enter Details</string>
    <string name="my_visits">My Visits</string>
    <string name="my_booking">My Booking</string>
    <string name="sharing_type_rooms">Sharing Type Rooms</string>
    <string name="select_room_type">Select Room Type</string>
    <string name="coupon">Coupon</string>
    <string name="promo_code">Promo Code</string>
    <string name="referral_code">Referral Code</string>
    <string name="enter_promo_code">Enter Promo Code</string>
    <string name="apply">Apply</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="plz_enter_valid_promo_code">Please enter the valid promo code</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_creating_an_account_you_agree_to_our">By creating an account, you agree to our Terms and Condition</string>
    <string name="stay_hook_managaer_text">Stay hook Managaer</string>
    <string name="month_text">/ per month</string>
    <string name="cost_1600_text">₹1600</string>
    <string name="_104_sqft_text">104 sqft</string>
    <string name="room_1_text">Room 1</string>
    <string name="_1_x_attached_bathroom_common_kitchen_text">1 X Attached Bathroom, Common Kitchen</string>
    <string name="sold_out_text">Sold Out</string>
    <string name="april_23_2023_text">April 23, 2023</string>
    <string name="marlis_choe_text">Marlis Choe</string>
    <string name="good_budget_text">Good budget</string>
    <string name="maintainance_issue_text">Maintainance Issue</string>
    <string name="nov_21_2023_text">Nov 21, 2023</string>
    <string name="master_text">Master Room</string>
    <string name="ticket2_text">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</string>
    <string name="two_star">⭐⭐☆☆☆</string>
    <string name="property_review_message">Property review message</string>
</resources>