<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="vm"
    type="com.stayhook.screen.register.RegisterViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/svRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollIndicators="none"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:context=".screen.register.RegisterActivity">


            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:src="@drawable/back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGetStartedOnRegister"
                style="@style/headingTextSizeStyle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/get_started_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivBackRegister" />

            <RelativeLayout
                android:id="@+id/rlRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@+id/tvGetStartedOnRegister">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCreateAccountToContOnRegister"
                    style="@style/defaultTextSizeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/create_acct_continue" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etUserNameOnRegister"
                    style="@style/defaultEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvCreateAccountToContOnRegister"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMobileOnRegister"
                    style="@style/defaultEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etUserNameOnRegister"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_tele"
                    android:drawablePadding="@dimen/_10sdp"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:maxLength="10"
                    android:singleLine="true" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signupBtn"
                    style="@style/defaultBtnStyle"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etMobileOnRegister"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:onClick="@{()->vm.isValidData(etUserNameOnRegister.getText().toString(),etMobileOnRegister.getText().toString())}"
                    android:layout_marginBottom="@dimen/_30sdp"
                    android:text="@string/sign_up" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/defaultTextSizeStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/signupBtn"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:gravity="center"
                    android:text="@string/by_creating_an_account_you_agree_to_our" />

            </RelativeLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvDontHaveAnAccount"
                    style="@style/defaultTextSizeStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvLoginTXTBtn"
                    style="@style/headingTextSizeStyle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/login_btn"
                    android:textColor="@color/primary_color"

                    />


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>